# power-quality-analyser

./: CMakeLists.txt  README.md  io.c  io.h  logbook.docx  main.c  results.txt  waveform.c  waveform.h
